--- a/src/app/tasks/tasks-list/tasks-list.component.html
+++ b/src/app/tasks/tasks-list/tasks-list.component.html
@@ -1,7 +1,7 @@
 <header>
   <h2>My Tasks</h2>
   <p>
-    <select (change)="onChangeTasksFilter(filter.value)" #filter>
+    <select (change)="onChangeTasksFilter(filterEl.value)" #filterEl>
       <option value="all">All</option>
       <option value="open">Open</option>
       <option value="in-progress">In-Progress</option>
@@ -11,7 +11,7 @@
 </header>
 
 <ul>
-  @for (task of tasks; track task) {
+  @for (task of tasks(); track task.id) {
     <li>
       <app-task-item [task]="task" />
     </li>
